Fix thumbnail cropping.

--- a/app/assets/stylesheets/itemgridview.scss
+++ b/app/assets/stylesheets/itemgridview.scss
@@ -9,6 +9,7 @@
 .thumbnail
 {
     margin-bottom: 20px;
+    margin-right: 2px;
     padding: 0px;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
